# qtl

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  INDEX  NAMESPACE  NEWS.md  README  README.md  README.txt  backup_proj
.github/workflows/: R-CMD-check.yaml
R/: AdditiveCoefficientFrom2Genoprobs.R  AdditiveCoefficientFrom3Genoprobs.R  AssembleDesignMatAndFormulae.R  ConvenientScanonevar.R  ConvertScanonevarToEmpiricalPs.R  CrossFromMolgenis.R  DGLM_norm.R  DominantCoefficientFrom3Genoprobs.R  FitNullDGLM.R  GetGenoprobsByMarkerName.R  GetPeaksFromVarscan.R  MQMaugment.R  MQMaugmentdata.R  MQMextra.R  MQMlicence.R  MQMplots.R  MQMsnow.R  MQMutil.R  PipelineMolgenis.R  ResultsFromMolgenis.R  ResultsToMolgenis.R  ScanViaDGLM.R  ScanonevarMarkerFitPlot.R  ScanonevarPermutations.R  Scanonevar_.R  SplitVecByMembership.R  ValidateAndFilterInput.R  ValidateConvertLODsToEmpPs.R  ValidateScanonevarInput.R  add.cim.covar.R  add_threshold.R  addmarker.R  addqtl.R  and.R  argmax.geno.R  arithscan.R  bcsft.R  bootstrapMQM.R  calc.genoprob.R  calc.pairprob.R  (+126 more)
backup_user/B7C753A/: cpp-complilation-config  cpp-definition-cache
backup_user/B7C753A/pcs/: files-pane.pper  windowlayoutstate.pper  workbench-pane.pper
backup_user/B7C753A/sdb/prop/: INDEX
contrib/biolib/: CMakeLists.txt  README
contrib/scripts/: check_rqtl.sh  cleanup.sh  install_rqtl.sh  repl_inputs.rb  run_all_tests.sh  update_header.rb
data/: badorder.RData  bristle3.RData  bristleX.RData  fake.4way.RData  fake.bc.RData  fake.f2.RData  hyper.RData  listeria.RData  locations.RData  map10.RData  mapthis.RData  multitrait.RData
inst/: BUGS.txt  CITATION  INSTALL_ME.txt  LICENSE.txt  MQM-TODO.txt  README.txt  STATUS.txt  TODO.txt  TODOmqm.txt
inst/contrib/biolib/: CMakeLists.txt
inst/contrib/scripts/: cleanup.sh  install_rqtl.sh  repl_inputs.rb  run_all_tests.sh
inst/doc/: geneticmaps.R  new_summary_scanone.R  new_summary_scantwo.R  rqtltour.R  rqtltour2.R
inst/doc/Sources/: geneticmaps.Rnw  new_multiqtl.Rnw  rqtltour.tex  rqtltour2.tex
inst/doc/Sources/MQM/: MQM-tour.Rnw  sweaveit.sh
inst/doc/Sources/MQM/mqm/: advantages_Rd.txt  advantages_latex.txt  limitations.txt  significance_references.txt  standard_references.txt  standard_seealso.txt
inst/docs/: MQM-tour.Rnw  SweaveIt.R  SweaveIt.Rout  chapter12.R  chapter12.snw  chapter12.tex  geneticmaps.R  new_multiqtl.R  new_multiqtl.Rnw  new_summary_scantwo.R  new_summary_scantwo.Rnw  rqtltour.R  rqtltour.tex  rqtltour2.R  sweaveit.bat  sweaveit.sh
inst/docs/Sources/: geneticmaps.Rnw  new_multiqtl.Rnw  new_summary_scanone.Rnw  new_summary_scantwo.Rnw  rqtltour.tex  rqtltour2.tex
inst/docs/Sources/MQM/: MQM-tour.Rnw  SweaveIt.R
inst/docs/Sources/MQM/mqm/: advantages.txt  advantages_Rd.txt  advantages_latex.txt  description.txt  limitations.txt  standard_example.txt  standard_references.txt  standard_seealso.txt
inst/docs/Sources/MQMtour/: MQM-tour.Rnw
inst/docs/Sources/MQMtour/mqm/: advantages.txt  description.txt  standard_seealso.txt
inst/docs/mqm/: advantages.txt  description.txt  limitations.txt  parallelisation_references.txt  standard_example.txt  standard_references.txt  standard_seealso.txt
inst/sampledata/: README.txt  gen.txt  listeria.csv  listeria.qtx  listeria_gen.csv  listeria_gen_rot.csv  listeria_map.txt  listeria_maps.txt  listeria_phe.csv  listeria_phe_rot.csv  listeria_qc_cro.txt  listeria_qc_map.txt  listeria_rot.csv  map.txt  phe.txt
man/: CisTransPlot.Rd  CrossFromMolgenis.Rd  FDRpermutation.Rd  MQM.Rd  MQMCofactors.Rd  MQMCofactorsEach.Rd  MQMLoadanalysis.Rd  MQMaugment.Rd  MQMfind.marker.Rd  MQMlogPheno.Rd  MQMpackage-package.Rd  MQMpermObject.Rd  PipelineMolgenis.Rd  ResultsFromMolgenis.Rd  a.starting.point.Rd  add.cim.covar.Rd  add.threshold.Rd  addcovarint.Rd  addint.Rd  addloctocross.Rd  addmarker.Rd  addpair.Rd  addqtl.Rd  addtoqtl.Rd  allchrsplits.Rd  argmax.geno.Rd  arithscan.Rd  arithscanperm.Rd  badorder.Rd  bayesint.Rd  bootstrapMQM.Rd  bristle3.Rd  bristleX.Rd  c.cross.Rd  c.scanone.Rd  c.scanoneperm.Rd  c.scantwo.Rd  c.scantwoperm.Rd  calc.errorlod.Rd  calc.genoprob.Rd  (+240 more)
mqm_tutorial/: SweaveIt.R  SweaveIt.Rout  Tutorial.txt  chapter12.R  chapter12.snw  chapter12.tex  sweaveit.bat
src/: CMakeLists.txt  MQM.h  MQMRegression.cpp  MQMRegression.h  MQMScan.h  MQMaugment.cpp  MQMaugment.h  MQMdata.cpp  MQMdata.h  MQMdatatypes.cpp  MQMdatatypes.h  MQMeliminate.cpp  MQMeliminate.h  MQMextra.cpp  MQMextra.h  MQMinterfaces.cpp  MQMinterfaces.h  MQMmain.cpp  MQMmapQTL.cpp  MQMmapQTL.h  MQMmapqtl.cpp  MQMmapqtl.h  MQMmixture.cpp  MQMmixture.h  MQMprob.cpp  MQMprob.h  MQMreDefine.h  MQMregression.cpp  MQMregression.h  MQMscan.cpp  MQMscan.h  MQMsupport.cpp  MQMsupport.h  Makevars  R_init.c  R_init.h  countXO.c  countXO.h  discan.c  discan.h  (+136 more)
test/: MQM_test0.txt
tests/: corty_remote_test.R  corty_test.R  listeria.map  listeria.raw  listeria2.csv  listeria2.map  map.txt  test_io.R  test_io.Rout.save  test_mapqtl_io.R  test_mapqtl_io.Rout.save  test_qtl.R  test_scanonevar.R  test_scanonevar.Rout.save  test_scanonevar.html  test_scanonevar.meanperm.R  test_scanonevar.meanvarperm.R  test_scanonevar.perm.R  test_scanonevar.varperm.R  test_tidyIO.R  test_tidyIO.Rout.save  test_varscan.RDS  test_varscan_perms.RDS  testaugmentation.R  testthat.R
tests/testthat/: test-fliporder.R  test-scantwoperm.R  test-stepwiseqtl.R  test-utils.R
vignettes/: .Rhistory  bcsft.Rnw  bcsft.bbl  bcsft.blg  plos.bst  vignette.bib
